--- a/doc/main.tex
+++ b/doc/main.tex
@@ -39,8 +39,8 @@
 
 \input{diagrams.tex}
 
-\chapter{Reduction algorithm}
+\chapter{Reduction}
 
-\input{Reduction}
+\input{Reduction/reduction.tex}
 
 \end{document}
