♻️ Move environment part

--- a/presentation/Oral.tex
+++ b/presentation/Oral.tex
@@ -75,15 +75,6 @@ Objectifs
 
 \end{frame}
 
-% 3. Présentez le contexte dans lequel vous l'effectuez : éventuellement l'équipe, le laboratoire, les partenaires hors CentraleSupélec, les fonctions des professionnels qui vous entourent.
-\begin{frame}{Environnement du projet}
-\begin{itemize}
-    \item \textbf{Encadrant} : Renaud Vilmart
-    \item \textbf{Équipe} : QuaCS
-    \item \textbf{Laboratoire} : Laboratoire Méthodes Formelles (LMF)
-\end{itemize}
-\end{frame}
-
 % 4. Développez la méthodologie que vous avez mise en œuvre durant ces premiers mois, en la justifiant.
 \begin{frame}{Méthodologie de travail}
 \underline{\textbf{Méthodologie}}
@@ -158,6 +149,30 @@ Objectifs
         \item Carte locale inversible
     \end{itemize}
 \end{itemize}
+\end{frame}
+
+\begin{frame}{Cadre du projet Développements futurs}
+    \huge{Cadre du projet \\ Formation future}
+\end{frame}
+
+% 3. Présentez le contexte dans lequel vous l'effectuez : éventuellement l'équipe, le laboratoire, les partenaires hors CentraleSupélec, les fonctions des professionnels qui vous entourent.
+\begin{frame}{Environnement du projet}
+    \begin{columns}
+        \begin{column}{0.6\textwidth}
+            \begin{itemize}
+                \item \textbf{Encadrant} : Renaud Vilmart
+                \item \textbf{Équipe} : QuaCS
+                \item \textbf{Laboratoire} : Laboratoire Méthodes Formelles
+            \end{itemize}
+        \end{column}
+        \begin{column}{0.4\textwidth}
+            \begin{center}
+                \includesvg[scale=0.17]{./images/lmf-logo.svg}
+                \vspace{0.5cm}
+                \includesvg[scale=0.3]{./images/quacs-logo.svg}
+            \end{center}
+        \end{column}
+    \end{columns}
 \end{frame}
 
 % 8. Résumez vos choix pour la suite en termes de S8, électifs, international, éventuellement césure
