🚸 Improve internships and training parts

--- a/presentation/Oral.tex
+++ b/presentation/Oral.tex
@@ -177,15 +177,19 @@ Objectifs
 
 % 8. Résumez vos choix pour la suite en termes de S8, électifs, international, éventuellement césure
 \begin{frame}{Année prochaine}
-\textbf{Électifs} % envisagés, choix possibles
+\begin{center}
+    Continuer la formation en \textbf{informatique théorique}
+\end{center}
+\small{Électifs} % envisagés, choix possibles
+\footnotesize{
 \begin{itemize}
-    \item \small{Génie logiciel orienté objet}
-    \item \small{Informatique théorique}
-    \item \small{Calcul haute performance}
-    \item \small{Modèles et sys. pour la gestion de données}
-\end{itemize}
+    \item Génie logiciel orienté objet
+    \item Informatique théorique
+    \item Calcul haute performance
+    \item Modèles et sys. pour la gestion de données
+\end{itemize}}
 \vspace{1em}
-Complément scientifique : métaheuristiques
+\small{Complément scientifique : métaheuristiques}
 \end{frame}
 
 \begin{frame}{Année prochaine}
@@ -238,9 +242,11 @@ Complément sur les césures
         \item Semestre au Paris Digital Lab
         \item Semestre en entreprise à l'international
     \end{itemize}
-    \item \textbf{Stage en entreprise}
+    \item \textbf{Stage}
     \begin{itemize}
-        \item En France ou à l'international
+        \item Entreprise
+        \item Laboratoire
+        \item France ou à international
     \end{itemize}
     \item \textbf{Stage en laboratoire}
     \begin{itemize}
