🍱 Add SVG assets

--- a/presentation/Oral.tex
+++ b/presentation/Oral.tex
@@ -5,7 +5,6 @@
 \DecimalMathComma
 \usepackage{braket}
 \usepackage{svg}
-% \setsvg{inkscape = '/etc/profiles/per-user/fluteur/bin/inkscape' -z -D}
 
 \usepackage{amsmath}
 \usepackage{pgfplots}
@@ -38,7 +37,7 @@
 
 \begin{center}
 Les besoins en puissance de calcul croissent rapidement
-\includegraphics[width=0.6\textwidth]{./images/artificial-intelligence-training-computation-by-researcher-affiliation.png}
+\includesvg[scale=0.4]{./images/artificial-intelligence-training-computation-by-researcher-affiliation.svg}
 
 Les algorithmes classiques sont parfois inefficaces
 
