🚑️ Fix font size in SVG

--- a/presentation/Oral.tex
+++ b/presentation/Oral.tex
@@ -5,6 +5,7 @@
 \DecimalMathComma
 \usepackage{braket}
 \usepackage{svg}
+\svgsetup{inkscapelatex=false}
 
 \usepackage{amsmath}
 \usepackage{pgfplots}
