--- a/presentation/Oral.tex
+++ b/presentation/Oral.tex
@@ -48,14 +48,20 @@ Les \textbf{algorithmes quantiques} permettent de résoudre certains problèmes 
 \end{frame}
 
 \begin{frame}
+Les machines quantiques sont en développement
+$$\Downarrow$$
 Il y a un besoin d'outils de développement et vérification d'algorithmes quantiques
+\pause
+
+\vspace{1em}
+Cela nécessite une \textbf{structure de données} adaptée
 \end{frame}
 
 % état de l'art (ce qui a été déjà fait par d'autres)
 \begin{frame}{État de l'art}
-\textbf{État de l'art:}
+\textbf{État de l'art}
 \begin{itemize}
-    \item Diagrammes de décision quantiques
+    \item Diagrammes de décision quantique
     \item Interprétation abstraite
     \item Arithmétique des intervalles réels
 \end{itemize}
@@ -123,7 +129,7 @@ Objectifs
                           axis lines=middle,
                           ]
                 \addplot[blue]  {x} node[left]{$y=x$};
-                \addplot[red]  {2^x} node[above=-1cm] {$y=2^x$};
+                \addplot[black]  {2^x} node[above=-1cm] {$y=2^x$};
                 \end{axis}
             \end{tikzpicture}
                 \end{column}
@@ -137,7 +143,6 @@ Objectifs
 \begin{frame}{Suite du projet}
 \textbf{Suite}
 \begin{itemize}
-    \item Analyse des résultats
     \item \textbf{Ajustements}
     \begin{itemize}
         \item Fonctions d'erreur
